--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -35,6 +35,12 @@
                 <i class="far fa-hdd"></i>
                 <span>Phân loại</span></a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" (click)="showAdminComponent('user')" routerLink="/admin/user"
+                routerLinkActive="active">
+                <i class="	fas fa-user-alt"></i>
+                <span>Người dùng</span></a>
+        </li>
         <!-- Divider -->
         <hr class="sidebar-divider d-none d-md-block">
 
