--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -57,7 +57,7 @@
                   <div class="divider"></div>
                   <p class="text-center">Bạn chưa đăng ký? <span>
                     <a class="register-link" 
-                        (click)="createAccount()">Tạo tài khoản</a>
+                       href="/register">Tạo tài khoản</a>
                 </span></p>                                                     
         
     </div>   
