--- a/src/app/components/admin/product/insert/insert.product.admin.component.html
+++ b/src/app/components/admin/product/insert/insert.product.admin.component.html
@@ -17,7 +17,12 @@
             <label for="description">Description:</label>
             <textarea id="description" [(ngModel)]="insertProductDTO.description" name="description" class="form-control" required></textarea>
           </div>
-  
+
+          <div class="form-group mb-3">
+            <label for="description">Weight:</label>
+            <input type="text" id="weight" [(ngModel)]="insertProductDTO.weight" name="weight" class="form-control col-md-3" required>
+          </div>
+
           <div class="form-group mb-3">
             <label for="category">Category:</label>
             <select id="category" [(ngModel)]="insertProductDTO.category_id" name="category" class="form-control" required>
