--- a/src/app/components/admin/product/update/update.product.admin.component.html
+++ b/src/app/components/admin/product/update/update.product.admin.component.html
@@ -15,7 +15,13 @@
               <input type="text" id="price" [(ngModel)]="updatedProduct.price" 
                 name="price" class="form-control col-md-3" required>
             </div>
-      
+            
+            <div class="form-group mb-3">
+              <label for="price">Weight:</label>
+              <input type="text" id="weight" [(ngModel)]="updatedProduct.weight" 
+                name="weight" class="form-control col-md-3" required>
+            </div>
+
             <div class="form-group mb-3">
               <label for="description">Description:</label>
               <textarea id="description" [(ngModel)]="updatedProduct.description" name="description" class="form-control" required></textarea>
