--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,53 +1,77 @@
-<header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-    <div class="container">
-      <a class="navbar-brand" href="#">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" [ngClass]="{ 'active': activeNavItem === 0 }" (click)="setActiveNavItem(0)"
-              routerLink="/">Trang chủ</a>
-          </li>
-          <!-- <li class="nav-item">
-                        <a class="nav-link" 
-                          [ngClass]="{ 'active': activeNavItem === 1 }"
-                          (click)="setActiveNavItem(1)"
-                          routerLink="/">Thông báo</a>
-                    </li> -->
-          <li class="nav-item">
-            <ng-container *ngIf="userResponse">
-              <ng-container ngbPopover="Tài khoản của tôi,Đơn mua,Đăng xuất" popoverTitle="User Actions"
-                triggers="click" [placement]="'bottom'">
-                <a class="nav-link" [ngbPopover]="popoverContent" (click)="togglePopover($event)">
-                  {{ userResponse.fullname }}
-                </a>
-                <ng-template #popoverContent>
-                  <div class="popover-list">
-                    <a class="popover-item" (click)="handleItemClick(0)">Tài khoản</a>
-                    <a class="popover-item" (click)="handleItemClick(1)">Đơn mua</a>
-                    <a class="popover-item" (click)="handleItemClick(2)">Đăng xuất</a>
-                  </div>
-                </ng-template>
-              </ng-container>
-            </ng-container>
-            <ng-container *ngIf="!userResponse">
-              <a class="nav-link" routerLink="/login">Đăng nhập</a>
-            </ng-container>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [ngClass]="{ 'active': activeNavItem === 2 }" (click)="setActiveNavItem(2)"
-              routerLink="/orders">
-              <i class="fas fa-shopping-cart icon"></i>
-              Giỏ hàng
-            </a>
-          </li>
-        </ul>
-      </div>
+<header class="header">
+    <div class="header__top" style="height: 50px;">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-6">
+                    <div class="header__top__left">
+                        <ul>
+                            <li><i class="fa fa-envelope"></i> hello@colorlib.com</li>
+                            <li>Free Shipping for all Order of $99</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6">
+                    <div class="header__top__right">
+                        <div class="header__top__right__social">
+                            <a href="#"><i class="fa fa-facebook"></i></a>
+                            <a href="#"><i class="fa fa-twitter"></i></a>
+                            <a href="#"><i class="fa fa-linkedin"></i></a>
+                            <a href="#"><i class="fa fa-pinterest-p"></i></a>
+                        </div>
+                        <div class="header__top__right__language">
+                            <img src="src/assets/img/language.png" alt="">
+                            <div>Tiếng Việt</div>
+                            <span class="arrow_carrot-down"></span>
+                            <ul>
+                                <li><a href="#">Tiếng Việt</a></li>
+                                <li><a href="#">English</a></li>
+                            </ul>
+                        </div>
+                        <div class="header__top__right__auth">
+                            <a routerLink="/login" *ngIf="!userResponse"><i class="fa fa-user"></i> Login</a>
+                            <a (click)="handleItemClick(0)" *ngIf="userResponse" title="Thông tin"><i class="fa fa-user"></i> {{userResponse.fullname}}</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3">
+                <div class="header__logo">
+                    <a href="./index.html"><img src="assets/img/logo.png" alt=""></a>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <nav class="header__menu">
+                    <ul>
+                        <li class="active"><a href="./index.html">Home</a></li>
+                        <li><a href="./shop-grid">Shop</a></li>
+                        <li><a href="#">Pages</a>
+                            <ul class="header__menu__dropdown">
+                                <li><a *ngIf="userResponse" (click)="handleItemClick(0)">Tài khoản</a></li>
+                                <li><a *ngIf="userResponse" (click)="handleItemClick(1)">Đơn mua</a></li>
+                                <li><a *ngIf="userResponse" (click)="handleItemClick(2)">Đăng xuất</a></li>
+                                <li><a href="./blog-details.html">Blog Details</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="./blog">Blog</a></li>
+                        <li><a href="./contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="col-lg-3">
+                <div class="header__cart">
+                    <ul>
+                        <li><a routerLink="/favourite"><i class="fa fa-heart"></i></a></li>
+                        <li><a  routerLink="/orders"><i class="fa fa-shopping-bag"><span>{{cartSize}}</span></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="humberger__open">
+            <i class="fa fa-bars"></i>
+        </div>
+    </div>
 </header>
