--- a/src/app/components/home/home1.component.html
+++ b/src/app/components/home/home1.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<p-toast position="center"></p-toast>
 <!-- Category -->
 <section class="hero">
     <div class="container">
@@ -76,22 +77,20 @@
                     <div class="featured__item__pic set-bg">
                         <img [src]="product.url" (click)="onProductClick(product.id)" alt="Product Image" class="product-image">
                         <ul class="featured__item__pic__hover">
-                            <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                            <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+                            <li><a (click)="addToFavourite(product.id)" title="Thêm vào yêu thích"><i class="fa fa-heart"></i></a></li>
+                            <li><a (click)="addToCart(product.id)" title="Thêm vào giỏ hàng"><i class="fa fa-shopping-cart"></i></a></li>
+                            <li><a (click)="buyNow(product.id)" title="Mua ngay"><i class="fas fa-shopping-bag"></i></a></li>
                         </ul>
                     </div>
                     <div class="featured__item__text">
                         <h6><a href="#">{{product.name}}</a></h6>
-                        <h5>${{product.price}}</h5>
+                        <h5>{{product.price| number:'1.0-0'}}<sup>đ</sup></h5>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</section>
-<!-- Featured Section End-->
-<!-- Paging Start-->
-<div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center">
         <div class="product__pagination">
             <a *ngIf="currentPage>0" (click)="onPageChange(0)">First</a>
             <a *ngIf="currentPage > 0" (click)="onPageChange(currentPage - 1)">
@@ -107,6 +106,9 @@
             <a *ngIf="currentPage>0" (click)="onPageChange(totalPages-1)">Last</a>
         </div>
 </div>
+</section>
+<!-- Featured Section End-->
+<!-- Paging Start-->
 <!-- Banner Begin -->
 <div class="banner">
     <div class="container">
