--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,4 +1,4 @@
-<!-- <app-header></app-header> -->
+<app-header></app-header>
 <div class="container">
     <form #registerForm="ngForm">
     <div class="row">
@@ -116,10 +116,9 @@
                     class="register-button">Đăng ký</button>
                 <div class="divider"></div>
                 <p class="text-center">Bạn đã có tài khoản? <span>
-                    <a href="#" class="register-link">Đăng nhập</a></span></p>
+                    <a href="/login" class="register-link">Đăng nhập</a></span></p>
             </div>
         </div>
     </div>
 </form>
 </div>
-<app-footer></app-footer>
