--- a/src/app/components/shop-grid/shop-grid.component.html
+++ b/src/app/components/shop-grid/shop-grid.component.html
@@ -66,8 +66,9 @@
                                 <img [src]="product.url" (click)="onProductClick(product.id)" alt="Product Image"
                                     class="product-image">
                                 <ul class="featured__item__pic__hover">
-                                    <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+                                    <li><a><i class="fa fa-heart"></i></a></li>
+                                    <li><a (click)="addToCart(product.id)"><i class="fa fa-shopping-cart"></i></a></li>
+                                    <li><a (click)="buyNow(product.id)"><i class="fas fa-shopping-bag"></i></a></li>
                                 </ul>
                             </div>
                             <div class="featured__item__text">
