--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -41,6 +41,12 @@
                 <i class="	fas fa-user-alt"></i>
                 <span>Người dùng</span></a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" (click)="showAdminComponent('coupon')" routerLink="/admin/coupon"
+                routerLinkActive="active">
+                <i class="	fas fa-ticket-alt"></i>
+                <span>Mã giảm giá</span></a>
+        </li>
         <!-- Divider -->
         <hr class="sidebar-divider d-none d-md-block">
 
