--- a/src/app/components/admin/order/order.admin.component.html
+++ b/src/app/components/admin/order/order.admin.component.html
@@ -46,7 +46,7 @@
           <td>{{ order.note }}</td>
           <td>{{ order.order_date | date }}</td>
           <td>{{ order.status }}</td>
-          <td>{{ order.total_money }}</td>
+          <td>{{ order.total_money | number:'1.0-0'}}<sup>đ</sup></td>
 <!--           
             <td>{{ order.shipping_method }}</td>
             <td>{{ order.shipping_address }}</td>
