--- a/src/app/components/detail-product/detail-product.component.html
+++ b/src/app/components/detail-product/detail-product.component.html
@@ -76,7 +76,7 @@
             <li><b>Weight</b> <span>{{product?.weight}}</span></li>
             <li><b>Share on</b>
               <div class="share">
-                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#" target="_blank" rel="noopener"><i class="fa fa-facebook"></i></a>
                 <a href="#"><i class="fa fa-twitter"></i></a>
                 <a href="#"><i class="fa fa-instagram"></i></a>
                 <a href="#"><i class="fa fa-pinterest"></i></a>
