--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -1,122 +1,172 @@
-<app-header></app-header>
-<div class="container">
-    <div class="intro-section">
-        <h1>Đây là trang Order</h1>
-        <p>Sử dụng Bootstrap</p>
-    </div>
-    <form [formGroup]="orderForm"> <!-- Thêm form và gán formGroup -->
+<p-toast position="center"></p-toast>
+<section class="breadcrumb-section set-bg" style="background-image: url('assets/img/breadcrumb.jpg')">
+    <div class="container">
         <div class="row">
-            <div class="col-md-5">
-                <h2 class="product-header">Thông tin người nhận</h2>
-                <div class="mb-3">
-                    <label for="fullname" class="form-label">Họ và tên</label>
-                    <input type="text" formControlName="fullname" class="form-control" id="fullname"
-                        [class.is-invalid]="orderForm.get('fullname')!.invalid && orderForm.get('fullname')!.touched">
-                    <div *ngIf="orderForm.get('fullname')!.invalid && orderForm.get('fullname')!.touched"
-                        class="invalid-feedback">
-                        Họ và tên là trường bắt buộc.
+            <div class="col-lg-12 text-center">
+                <div class="breadcrumb__text">
+                    <h2>Shopping Cart</h2>
+                    <div class="breadcrumb__option">
+                        <a href="./">Home</a>
+                        <span>Shopping Cart</span>
                     </div>
-                </div>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="text" formControlName="email" class="form-control" id="email"
-                        [class.is-invalid]="orderForm.get('email')!.invalid && orderForm.get('email')!.touched">
-                    <div *ngIf="orderForm.get('email')!.invalid && orderForm.get('email')!.touched"
-                        class="invalid-feedback">
-                        {{ orderForm.get('email')!.hasError('email') ? 'Email không hợp lệ' : 'Email là trường bắt buộc'
-                        }}
-                    </div>
-                </div>
-
-                <div class="mb-3">
-                    <label for="phone" class="form-label">Số điện thoại</label>
-                    <input type="text" class="form-control" formControlName="phone_number" placeholder="Số điện thoại"
-                        required id="phone"
-                        [class.is-invalid]="orderForm.get('phone_number')!.invalid && orderForm.get('phone_number')!.touched">
-                    <div *ngIf="orderForm.get('phone_number')!.invalid && orderForm.get('phone_number')!.touched"
-                        class="invalid-feedback">
-                        Số điện thoại là trường bắt buộc và ít nhất 6 ký tự.
-                    </div>
-                </div>
-                <div class="mb-3">
-                    <label for="address" class="form-label">Địa chỉ</label>
-                    <input type="text" class="form-control" formControlName="address" placeholder="Địa chỉ" required
-                        id="address"
-                        [class.is-invalid]="orderForm.get('address')!.invalid && orderForm.get('address')!.touched">
-                    <div *ngIf="orderForm.get('address')!.invalid && orderForm.get('address')!.touched"
-                        class="invalid-feedback">
-                        Địa chỉ là trường bắt buộc và ít nhất 5 ký tự.
-                    </div>
-                </div>
-                <div class="mb-3">
-                    <label for="note" class="form-label">Ghi chú</label>
-                    <input type="text" class="form-control" formControlName="note" placeholder="Ghi chú" required
-                        id="note">
-                </div>
-                <div class="mb-3">
-                    <label for="shippingMethod">Phương thức vận chuyển</label>
-                    <select class="form-control" id="shippingMethod" formControlName="shipping_method">
-                        <option value="express">Nhanh (Express)</option>
-                        <option value="normal">Thường (Normal)</option>
-                    </select>
-                </div>
-                <div class="mb-3">
-                    <label for="paymentMethod">Phương thức thanh toán</label>
-                    <select class="form-control" id="paymentMethod" formControlName="payment_method">
-                        <option value="cod">Thanh toán khi nhận hàng (COD)</option>
-                        <option value="other">Thanh toán khác</option>
-                    </select>
-                </div>
-                <!-- </form> -->
-            </div>
-            <div class="col-md-7">
-                <h2 class="product-order">Sản phẩm đã đặt hàng</h2>
-                <table>
-                    <tbody>
-                        <ng-container *ngFor="let item of cartItems; let i = index">
-                            <tr>
-                                <td>
-                                    <div class="product-info">
-                                        <img [src]="item.product.thumbnail" alt="Product Image" class="product-image">
-                                        <span class="product-name">{{ item.product.name }}</span>
-                                    </div>
-                                </td>
-                                <td>
-                                    <div class="product-quantity">
-                                        <div class="border-wrapper">
-                                            <button (click)="decreaseQuantity(i)">-</button>
-                                            {{ item.quantity }}
-                                            <button (click)="increaseQuantity(i)">+</button>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td>{{ item.product.price | number:'1.0-0' }}</td>
-                                <td>{{ (item.product.price * item.quantity) | number:'1.0-0' }}</td>
-                                <td>
-                                    <button class="btn btn-danger" (click)="confirmDelete(i)">
-                                        Xóa
-                                    </button>
-                                </td>
-                            </tr>
-                        </ng-container>
-                    </tbody>
-
-                </table>
-                <div class="text-start mt-3">
-                    <h4 class="header-text text-end ">Tổng giá: {{ totalAmount | number:'1.2-2'}}</h4>
-                </div>
-                <div class="mt-3">
-                    <h4 class="product-header">Nhập coupon</h4>
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Nhập coupon">
-                        <button class="btn btn-gradient" type="button">Áp dụng</button>
-                    </div>
-                </div>
-                <div class="text-start mt-3">
-                    <button (click)="placeOrder()" class="btn btn-gradient" type="button">Đặt hàng</button>
                 </div>
             </div>
         </div>
-    </form>
-</div>
-<app-footer></app-footer>
+    </div>
+</section>
+<!-- Shoping Cart Section Begin -->
+<section class="shoping-cart spad">
+    <div class="container">
+        <form [formGroup]="orderForm">
+            <div class="row" style="margin-bottom: 50px;">
+                <div class="col-lg-12">
+                    <div class="row mb-3">
+                        <div class="col-lg-6">
+                            <label>Họ và tên<span>*</span></label>
+                            <input type="text" formControlName="fullname" class="form-control" id="fullname"
+                                [class.is-invalid]="orderForm.get('fullname')!.invalid && orderForm.get('fullname')!.touched">
+                            <div *ngIf="orderForm.get('fullname')!.invalid && orderForm.get('fullname')!.touched"
+                                class="invalid-feedback">
+                                Họ và tên là trường bắt buộc.
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <label>Email<span>*</span></label>
+                            <input type="text" formControlName="email" class="form-control" id="email"
+                                [class.is-invalid]="orderForm.get('email')!.invalid && orderForm.get('email')!.touched">
+                            <div *ngIf="orderForm.get('email')!.invalid && orderForm.get('email')!.touched"
+                                class="invalid-feedback">
+                                {{ orderForm.get('email')!.hasError('email') ? 'Email không hợp lệ' : 'Email là trường
+                                bắt buộc' }}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <div class="col-lg-6">
+                            <label>Số điện thoại<span>*</span></label>
+                            <input type="text" class="form-control" formControlName="phone_number"
+                                placeholder="Số điện thoại" required id="phone"
+                                [class.is-invalid]="orderForm.get('phone_number')!.invalid && orderForm.get('phone_number')!.touched">
+                            <div *ngIf="orderForm.get('phone_number')!.invalid && orderForm.get('phone_number')!.touched"
+                                class="invalid-feedback">
+                                Số điện thoại là trường bắt buộc và ít nhất 6 ký tự.
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <label>Địa chỉ<span>*</span></label>
+                            <input type="text" class="form-control" formControlName="address" placeholder="Địa chỉ"
+                                required id="address"
+                                [class.is-invalid]="orderForm.get('address')!.invalid && orderForm.get('address')!.touched">
+                            <div *ngIf="orderForm.get('address')!.invalid && orderForm.get('address')!.touched"
+                                class="invalid-feedback">
+                                Địa chỉ là trường bắt buộc và ít nhất 5 ký tự.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <div class="col-lg-6">
+                            <label for="shippingMethod">Phương thức vận chuyển</label>
+                            <select class="form-control" id="shippingMethod" formControlName="shipping_method">
+                                <option value="express">Nhanh (Express)</option>
+                                <option value="normal">Thường (Normal)</option>
+                            </select>
+                        </div>
+                        <div class="col-lg-6">
+                            <label for="paymentMethod">Phương thức thanh toán</label>
+                            <select class="form-control" id="paymentMethod" formControlName="payment_method">
+                                <option value="cod">Thanh toán khi nhận hàng (COD)</option>
+                                <option value="other">Thanh toán khác</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <div class="col-lg-12">
+                            <label>Ghi chú</label>
+                            <textarea type="text" class="form-control" formControlName="note" placeholder="Ghi chú"
+                                required id="note"></textarea>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="shoping__cart__table">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th class="shoping__product">Products</th>
+                                    <th>Price</th>
+                                    <th>Quantity</th>
+                                    <th>Total</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <ng-container *ngFor="let item of cartItems; let i = index">
+                                    <tr>
+                                        <td class="shoping__cart__item">
+                                            <img [src]="item.product.thumbnail" alt=""
+                                                style="width: 100px; height: 100px;">
+                                            <h5>{{ item.product.name }}</h5>
+                                        </td>
+                                        <td class="shoping__cart__price">
+                                            {{ item.product.price | number:'1.0-0' }}<sup>vnđ</sup>
+                                        </td>
+                                        <td class="shoping__cart__quantity">
+                                            <div class="quantity">
+                                                <button (click)="decreaseQuantity(i)">-</button>
+                                                {{ item.quantity }}
+                                                <button (click)="increaseQuantity(i)">+</button>
+                                            </div>
+                                        </td>
+                                        <td class="shoping__cart__total">
+                                            {{ (item.product.price * item.quantity) | number:'1.0-0' }}<sup>vnđ</sup>
+                                        </td>
+                                        <td class="shoping__cart__item__close">
+                                            <span class="icon_close" (click)="confirmDelete(i)"></span>
+                                        </td>
+                                    </tr>
+                                </ng-container>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="shoping__cart__btns">
+                        <a href="#" class="primary-btn cart-btn">CONTINUE SHOPPING</a>
+                        <a href="#" class="primary-btn cart-btn cart-btn-right"><span class="icon_loading"></span>
+                            Upadate Cart</a>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="shoping__continue">
+                        <div class="shoping__discount">
+                            <h5>Discount Codes</h5>
+                            <div class="row">
+                                <div class="checkout__input">
+                                    <input type="text" formControlName="coupon_code" name="couponCode" id="couponCode"
+                                        placeholder="Enter your coupon code">
+                                </div>
+                                <div class="checkout__input">
+                                    <button (click)="applyCoupon()" class="site-btn">APPLY COUPON</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="shoping__checkout">
+                        <h5>Cart Total</h5>
+                        <ul>
+                            <li>Subtotal <span>{{ subTotalAmount | number:'1.0-0'}}<sup>vnđ</sup></span></li>
+                            <li>Total <span>{{ totalAmount| number:'1.0-0'}}<sup>vnđ</sup></span></li>
+                        </ul>
+                        <button class="site-btn" (click)="placeOrder()">Đặt hàng</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+</section>
