--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -22,7 +22,7 @@
                 <div class="mt-3"></div>
                 <div class="form-group password-field">
                     <label for="password">Mật khẩu</label>
-                    <input type="password" 
+                    <input type="{{ showPassword ? 'text' : 'password' }}" 
                         [(ngModel)]="password"                            
                         name="password"
                         placeholder="Ít nhất 3 ký tự" required
@@ -39,7 +39,7 @@
                 <div class="mt-3"></div>
                 <div class="form-group password-field">
                     <label for="retype-password">Gõ lại mật khẩu</label>
-                    <input type="password" 
+                    <input type="{{ showPassword ? 'text' : 'password' }}"
                         placeholder="Ít nhất 3 ký tự" 
                         [(ngModel)]="retypePassword" 
                         name="retypePassword"
