--- a/src/app/components/shop-grid/shop-grid.component.html
+++ b/src/app/components/shop-grid/shop-grid.component.html
@@ -73,7 +73,7 @@
                             </div>
                             <div class="featured__item__text">
                                 <h6><a href="#">{{product.name}}</a></h6>
-                                <h5>${{product.price}}</h5>
+                                <h5>{{product.price| number:'1.0-0'}}<sup>đ</sup></h5>
                             </div>
                         </div>
                     </div>
