update validate+ email

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -17,11 +17,10 @@
                 <div class="footer__widget">
                     <h6>Useful Links</h6>
                     <ul>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">About Our Shop</a></li>
+                        <li><a href="#">Về chúng tôi</a></li>
+                        <li><a href="#">Về cửa hàng</a></li>
                         <li><a href="#">Secure Shopping</a></li>
-                        <li><a href="#">Delivery infomation</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Điều khoản</a></li>
                         <li><a href="#">Our Sitemap</a></li>
                     </ul>
                     <ul>
