--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,8 +5,8 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="header__top__left">
                         <ul>
-                            <li><i class="fa fa-envelope"></i> hello@colorlib.com</li>
-                            <li>Free Shipping for all Order of $99</li>
+                            <li><i class="fa fa-envelope"></i> huce@gmail.com</li>
+                            <li>Giao hàng miễn phí với đơn từ 200.000đ</li>
                         </ul>
                     </div>
                 </div>
@@ -47,8 +47,8 @@
                 <nav class="header__menu">
                     <ul>
                         <li class="active"><a href="./index.html">Home</a></li>
-                        <li><a href="./shop-grid">Shop</a></li>
-                        <li><a href="#">Pages</a>
+                        <li><a href="./shop-grid">Sản phẩm</a></li>
+                        <li><a href="#">Page</a>
                             <ul class="header__menu__dropdown">
                                 <li><a *ngIf="userResponse" (click)="handleItemClick(0)">Tài khoản</a></li>
                                 <li><a *ngIf="userResponse" (click)="handleItemClick(1)">Đơn mua</a></li>
@@ -57,7 +57,7 @@
                             </ul>
                         </li>
                         <li><a href="./blog">Blog</a></li>
-                        <li><a href="./contact.html">Contact</a></li>
+                        <li><a href="./contact.html">Liên hệ</a></li>
                     </ul>
                 </nav>
             </div>
