--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="col-lg-3">
                 <div class="hero__categories">
-                    <div class="hero__categories__all">
+                    <div class="hero__categories__all" style="background-color: brown;">
                         <i class="fa fa-bars"></i>
                         <span>Danh mục</span>
                     </div>
@@ -28,16 +28,16 @@
                                 </select>
                             </div>
                             <input type="text" [(ngModel)]="keyword" name="name" placeholder="Nhập tên sản phẩm">
-                            <button type="submit" class="site-btn">SEARCH</button>
+                            <button type="submit" class="site-btn" style="background-color: brown;">SEARCH</button>
                         </form>
                     </div>
                 </div>
                 <div class="hero__item set-bg" data-setbg="img/hero/banner.jpg">
                     <div class="hero__text">
-                        <span>FRUIT FRESH</span>
-                        <h2>Vegetable <br />100% Organic</h2>
-                        <p>Free Pickup and Delivery Available</p>
-                        <a href="/shop-grid" class="primary-btn">SHOP NOW</a>
+                        <span>THỰC PHẨM TƯƠI SẠCH</span>
+                        <h2>RAU CỦ QUẢ <br />100% Organic</h2>
+                        <p>THOẢI MÁI LỰA CHỌN, KHÔNG LO VỀ GIÁ</p>
+                        <a href="/shop-grid" class="primary-btn" style="background-color: brown;">SHOP NOW</a>
                     </div>
                 </div>
             </div>
@@ -50,7 +50,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="section-title">
-                    <h2>Featured Product</h2>
+                    <h2>Danh sách sản phẩm</h2>
                 </div>
                 <div class="featured__controls">
                     <ul>
