--- a/src/app/components/user-profile/user.profile.component.html
+++ b/src/app/components/user-profile/user.profile.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<p-toast position="center"></p-toast>
 <div class="container">
     <div class="main-body">
         <form [formGroup]="userProfileForm">
@@ -10,7 +11,7 @@
                                 <img src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="Admin"
                                     class="rounded-circle p-1 bg-primary" width="110">
                                 <div class="mt-3">
-                                    <h4> {{userResponse?.fullname}}</h4> 
+                                    <h4> {{userResponse?.fullname}}</h4>
                                     <p class="text-secondary mb-1">Sđt: {{userResponse?.phone_number}}</p>
                                     <p class="text-muted font-size-sm">Địa chỉ: {{userResponse?.address}}</p>
                                 </div>
@@ -36,6 +37,15 @@
                             </div>
                             <div class="row mb-3">
                                 <div class="col-sm-3">
+                                    <h6 class="mb-0">Email</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    <input type="text" formControlName="email" class="form-control" id="email"
+                                        [class.is-invalid]="userProfileForm.get('email')!.invalid && userProfileForm.get('email')!.touched">
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col-sm-3">
                                     <h6 class="mb-0">Ngày sinh</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary">
@@ -50,6 +60,10 @@
                                 <div class="col-sm-9 text-secondary">
                                     <input type="text" formControlName="address" class="form-control" id="address"
                                         [class.is-invalid]="userProfileForm.get('address')!.invalid && userProfileForm.get('address')!.touched">
+                                    <div *ngIf="userProfileForm.get('address')!.invalid && userProfileForm.get('address')!.touched"
+                                        class="invalid-feedback">
+                                        Địa chỉ là trường bắt buộc.
+                                    </div>
                                 </div>
                             </div>
                             <div class="row mb-3">
@@ -57,12 +71,10 @@
                                     <h6 class="mb-0">Mật khẩu</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary">
-                                    <input type="password" class="form-control" formControlName="password"
-                                        placeholder="Mật khẩu" required id="password" [class.is-invalid]="userProfileForm.get('password')!.invalid 
-                                        && userProfileForm.get('password')!.touched">
-                                    <div *ngIf="userProfileForm.get('password')!.invalid 
-                                         && userProfileForm.get('password')!.touched" class="invalid-feedback">
-                                        Mật khẩu ít nhất 3 ký tự.
+                                    <input type="{{showPassword ? 'text': 'password'}}" class="form-control"
+                                        formControlName="password" placeholder="Mật khẩu" id="password">
+                                    <div style="color: red" *ngIf="userProfileForm.get('password')?.hasError('minlength')">
+                                        Mật khẩu phải có ít nhất 8 ký tự
                                     </div>
                                 </div>
                             </div>
@@ -71,19 +83,23 @@
                                     <h6 class="mb-0">Nhập lại mật khẩu</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary">
-                                    <input type="password" class="form-control" formControlName="retype_password"
-                                        placeholder="Nhập lại mật khẩu" required id="retype_password"
-                                        [class.is-invalid]="userProfileForm.get('retype_password')!.invalid 
-                                        && userProfileForm.get('retype_password')!.touched">
-                                    <div *ngIf="userProfileForm.hasError('passwordMismatch')" class="invalid-feedback">
-                                        Mật khẩu không khớp.
-                                    </div>
+                                    <input type="{{showPassword ? 'text': 'password'}}" class="form-control"
+                                        formControlName="retype_password" placeholder="Nhập lại mật khẩu"
+                                        id="retype_password">
+                                    <i class="password-toggle fas" [ngClass]="showPassword ? 
+                                        'fa-eye' : 'fa-eye-slash'" (click)="togglePassword()">
+                                    </i>
+                                    <div style="color: red" *ngIf="userProfileForm.errors?.['passwordsMismatch']">Mật
+                                        khẩu chưa khớp</div>
+
                                 </div>
+
                             </div>
                             <div class="row">
                                 <div class="col-sm-3"></div>
                                 <div class="col-sm-9 text-secondary">
-                                    <input type="button" class="btn btn-primary px-4" value="Lưu thay đổi" (click)="save()">
+                                    <input type="button" class="btn btn-primary px-4" value="Lưu thay đổi"
+                                        (click)="save()">
                                 </div>
                             </div>
                         </div>
