update giao dien+ than toan vnpay

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -46,7 +46,7 @@
             <div class="col-lg-6">
                 <nav class="header__menu">
                     <ul>
-                        <li class="active"><a href="./index.html">Home</a></li>
+                        <li><a href="./index.html">Home</a></li>
                         <li><a href="./shop-grid">Sản phẩm</a></li>
                         <li><a href="#">Page</a>
                             <ul class="header__menu__dropdown">
@@ -65,7 +65,7 @@
                 <div class="header__cart">
                     <ul>
                         <li><a routerLink="/favourite"><i class="fa fa-heart"></i></a></li>
-                        <li><a  routerLink="/orders"><i class="fa fa-shopping-bag"><span>{{cartSize}}</span></i></a></li>
+                        <li><a  routerLink="/orders"><i class="fa fa-shopping-bag"><span style="background-color: rgb(78,115,223);">{{cartSize}}</span></i></a></li>
                     </ul>
                 </div>
             </div>
