--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -109,7 +109,7 @@
     margin-left: 10px;
 }
 .active {
-    background-color: rgb(127,173,57);
+    background-color: #4e73df;
     color: white;
     padding: 2px 8px;
 }
