--- a/src/app/styles/shared-styles.scss
+++ b/src/app/styles/shared-styles.scss
@@ -1,4 +1,4 @@
-$shopapp-color: rgb(127,173,57);    
+$shopapp-color: #4e73df;    
 $shopapp-tint-color: rgb(3, 17, 5);
 $shopapp-title-color: rgb(255, 255, 255);
-$shopapp-background-color: rgb(127,173,57)
+$shopapp-background-color: #4e73df;
