--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="col-lg-3">
                 <div class="hero__categories">
-                    <div class="hero__categories__all" style="background-color: brown;">
+                    <div class="hero__categories__all" style="background-color:rgb(78,115,223);">
                         <i class="fa fa-bars"></i>
                         <span>Danh mục</span>
                     </div>
@@ -28,7 +28,7 @@
                                 </select>
                             </div>
                             <input type="text" [(ngModel)]="keyword" name="name" placeholder="Nhập tên sản phẩm">
-                            <button type="submit" class="site-btn" style="background-color: brown;">SEARCH</button>
+                            <button type="submit" class="site-btn" style="background-color: rgb(78,115,223);">SEARCH</button>
                         </form>
                     </div>
                 </div>
@@ -37,7 +37,7 @@
                         <span>THỰC PHẨM TƯƠI SẠCH</span>
                         <h2>RAU CỦ QUẢ <br />100% Organic</h2>
                         <p>THOẢI MÁI LỰA CHỌN, KHÔNG LO VỀ GIÁ</p>
-                        <a href="/shop-grid" class="primary-btn" style="background-color: brown;">SHOP NOW</a>
+                        <a href="/shop-grid" class="primary-btn" style="background-color: rgb(78,115,223);">SHOP NOW</a>
                     </div>
                 </div>
             </div>
@@ -83,15 +83,15 @@
     </div>
     <div class="d-flex justify-content-center">
         <div class="product__pagination">
-            <a *ngIf="currentPage>0" (click)="onPageChange(0)">First</a>
-            <a *ngIf="currentPage > 0" (click)="onPageChange(currentPage - 1)">
+            <a  *ngIf="currentPage>0" (click)="onPageChange(0)">First</a>
+            <a  *ngIf="currentPage > 0" (click)="onPageChange(currentPage - 1)">
                 <i class="fa fa-long-arrow-left"></i>
             </a>
             <ng-container *ngFor="let page of visiblePages">
                 <a [ngClass]="{'active': page === currentPage + 1}" 
                     (click)="onPageChange(page - 1)">{{ page }}</a>
             </ng-container>
-            <a (click)="onPageChange(currentPage + 1)">
+            <a  (click)="onPageChange(currentPage + 1)">
                 <i class="fa fa-long-arrow-right"></i>
             </a>
             <a *ngIf="currentPage>0" (click)="onPageChange(totalPages-1)">Last</a>
